--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 244, 244, 244;
   --background-end-rgb: 255, 255, 255;
 
   --primary-glow: conic-gradient(
@@ -86,14 +86,12 @@ body {
 }
 
 body {
+ 
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #fff
+
 }
+
 
 a {
   color: inherit;
