--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,6 +97,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+li{
+  list-style: none;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
