--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -16,6 +16,7 @@
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
   .hero_container > h1 {
