--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -22,11 +22,15 @@
 
 .nav_logo {
     
-    justify-self: start;
+    
     margin-left: 20px;
     cursor: pointer;
     text-decoration: none;
     font-size: 1.7rem;
+    display: flex;
+    align-items: center;
+}
+.nav_logo :nth-child(1){
     display: flex;
     align-items: center;
 }
@@ -43,10 +47,13 @@
     width: 60vw;
     justify-content: end;
     margin-right: 1rem;
+    margin-left: 30px;
     font-size: 1.3rem;
 }
 .navMenu li {
     padding: 6px 10px;
+    display: flex;
+    align-items: center;
     
 }
 
@@ -56,3 +63,22 @@
     background-color: rgb(240, 239, 239);
     color: #242424;
 }
+
+@media screen and (max-width: 960px) {
+    .nav_logo {
+      font-size: 1.2rem;
+    }
+    .navMenu{
+        font-size: 1rem;
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    .nav_logo {
+        font-size: 1.1rem;
+      }
+      .navMenu{
+          font-size: 0.9rem;
+      }
+   
+  }
