--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -34,41 +34,24 @@
       'Lucida Sans', Arial, sans-serif;
   }
   
-  .hero-btns {
-    margin-top: 32px;
-  }
+
   
-  .hero-btns .btn {
-    margin: 6px;
-  }
-  
-  .fa-play-circle {
-    margin-left: 4px;
-  }
-  
-  @media screen and (max-width: 960px) {
-    .hero-container > h1 {
+  @media screen and (max-width: 1000px) {
+    .hero_container > h1 {
       font-size: 70px;
-      margin-top: -150px;
+      margin-top: -200px;
     }
   }
   
   @media screen and (max-width: 768px) {
-    .hero-container > h1 {
-      font-size: 50px;
-      margin-top: -100px;
+    .hero_container > h1 {
+      font-size: 40px;
+      margin-top: -150px;
     }
   
-    .hero-container > p {
-      font-size: 30px;
+    .hero_container > p {
+      font-size: 25px;
     }
   
-    .btn-mobile {
-      display: block;
-      text-decoration: none;
-    }
-  
-    .btn {
-      width: 100%;
-    }
+   
   }
