--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -9,6 +9,7 @@
   .hero_container {
     /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: fit-content;
+    min-height: 300px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -41,6 +42,7 @@
       font-size: 70px;
       margin-top: -200px;
     }
+    
   }
   
   @media screen and (max-width: 768px) {
