update homepage hero section

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,11 @@
 
-.home {
+/* .home {
   display: flex;
   flex-direction: column;
 }
+
+.card_container{ 
+  height: "fit-content"; 
+  background-color: #fff;
+  
+}  */
