--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -1,21 +1,21 @@
 
 .video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    
-    
-  }
+  object-fit:contain;
+  width: 100%;
+  height: 100%;
+  
+  
+}
   .hero_container {
     /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: fit-content;
     min-height: 300px;
-    width: 100%;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    
     object-fit: contain;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
