--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,10 +2,13 @@
 /* .home {
   display: flex;
   flex-direction: column;
-}
+} */
 
-.card_container{ 
-  height: "fit-content"; 
-  background-color: #fff;
+/* .card_container{ 
+  flex:1
   
-}  */
+} */
+
+/* .home {
+  margin-top: 60px;
+} */
